--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -34,7 +34,8 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:id="@+id/rellayout2"
-            android:layout_below="@+id/rellayout1">
+            android:layout_below="@+id/rellayout1"
+            android:layout_marginBottom="50dp">
 
             <include layout="@layout/layout_center_viewpager" />
 
