--- a/app/src/main/res/layout/layout_top_tabs_map.xml
+++ b/app/src/main/res/layout/layout_top_tabs_map.xml
@@ -22,7 +22,7 @@
                         android:layout_width="40dp"
                         android:layout_height="40dp"
                         android:layout_centerVertical="true"
-                        android:id="@+id/ivMap"
+                        android:id="@+id/ivBackarrow"
                         android:src="@drawable/ic_backarrow"/>
 
                     <TextView
