--- a/app/src/main/res/layout/layout_top_tabs_notifs.xml
+++ b/app/src/main/res/layout/layout_top_tabs_notifs.xml
@@ -35,6 +35,14 @@
                         android:layout_centerVertical="true"
                         android:id="@+id/ivMap"
                         android:src="@drawable/ic_map"/>
+
+                    <ImageView
+                        android:layout_width="40dp"
+                        android:layout_height="40dp"
+                        android:src="@drawable/ic_android"
+                        android:layout_centerVertical="true"
+                        android:layout_toLeftOf="@+id/ivMap"
+                        android:id="@+id/testNotif"/>
                     
                 </RelativeLayout>
                 
