--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,5 @@
 <resources>
     <dimen name="custom_marker_image">75dp</dimen>
     <dimen name="custom_marker_padding">2dp</dimen>
+    <dimen name="fab_margin">16dp</dimen>
 </resources>
