--- a/app/src/main/res/anim/right_to_left.xml
+++ b/app/src/main/res/anim/right_to_left.xml
@@ -2,7 +2,8 @@
 <set xmlns:android="http://schemas.android.com/apk/res/android">
     android:shareInterpolator="false">
     <translate
-        android:fromXDelta="0%" android:toXDelta="100%"
-        android:fromYDelta="0%" android:toYDelta="0%"
-        android:duration="300" />
+        android:duration="200"
+        android:fromXDelta="-100.0%p"
+        android:interpolator="@android:anim/decelerate_interpolator"
+        android:toXDelta="0.0" />
 </set>
