--- a/app/src/main/res/layout/layout_messages_sender.xml
+++ b/app/src/main/res/layout/layout_messages_sender.xml
@@ -8,19 +8,25 @@
         android:layout_height="70dp">
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/chat_image"
-            android:layout_width="60dp"
-            android:layout_height="60dp"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
             android:layout_marginStart="10dp"
             android:src="@mipmap/ic_launcher"
             android:layout_centerVertical="true"/>
         <TextView
             android:id="@+id/chat_user"
             android:layout_toRightOf="@id/chat_image"
-            android:layout_width="270dp"
-            android:layout_height="30dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="10sp"
+            android:paddingLeft="10dp"
+            android:paddingTop="2dp"
+            android:paddingBottom="4dp"
+            android:paddingRight="10dp"
             android:background="@drawable/my_chat"
             android:layout_marginStart="10dp"
-            android:layout_marginTop="25dp"
+            android:layout_marginTop="29dp"
+            android:textColor="@color/white"
             />
         <TextView
             android:id="@+id/chat_name"
