--- a/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -3,35 +3,35 @@
 
     <item
         android:id="@+id/ic_house"
-        android:icon="@drawable/ic_house"
+        android:icon="@drawable/ic_home"
         android:title="">
 
     </item>
 
     <item
         android:id="@+id/ic_search"
-        android:icon="@drawable/ic_search"
+        android:icon="@drawable/ic_search1"
         android:title="">
 
     </item>
 
     <item
         android:id="@+id/ic_circle"
-        android:icon="@drawable/ic_circle"
+        android:icon="@drawable/ic_share"
         android:title="">
 
     </item>
 
     <item
         android:id="@+id/ic_alert"
-        android:icon="@drawable/ic_alert"
+        android:icon="@drawable/ic_notif"
         android:title="">
 
     </item>
 
     <item
         android:id="@+id/ic_android"
-        android:icon="@drawable/ic_android"
+        android:icon="@drawable/ic_profile"
         android:title="">
 
     </item>
