--- a/app/src/main/res/layout/fragment_camera.xml
+++ b/app/src/main/res/layout/fragment_camera.xml
@@ -11,7 +11,8 @@
             android:id="@+id/ellipses_dialog"
             android:layout_alignParentRight="true"
             android:layout_width="30dp"
-            android:layout_height="40dp"
+            android:layout_height="30dp"
+            android:layout_centerVertical="true"
             android:background="@drawable/ic_ellipses" />
 
     </RelativeLayout>
