--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -37,8 +37,8 @@
             android:layout_below="@+id/rellayout1"
             android:layout_marginBottom="50dp">
 
-            <include layout="@layout/layout_center_viewpager" />
-
+            <!--include layout="@layout/layout_center_viewpager" />
+            -->
         </RelativeLayout>
 
         <!-- Bottom Navigation -->
