gallery weight animation

--- a/app/src/main/res/layout/layout_center_profile.xml
+++ b/app/src/main/res/layout/layout_center_profile.xml
@@ -8,111 +8,136 @@
         android:layout_height="match_parent"
         android:background="@color/white">
 
-
-        <!--Middle Section -->
-        <RelativeLayout
+        <ScrollView
+            android:id="@+id/scrolllayout"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/rellayout1"
-            android:id="@+id/rellayout2"
-            android:background="@color/white">
+            android:layout_height="match_parent"
+            android:fillViewport="true">
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:id="@+id/linLayout"
-                android:weightSum="100">
-
-                <RelativeLayout
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="25"
-                    android:layout_marginStart="25dp">
-
-                    <de.hdodenhof.circleimageview.CircleImageView
-                        android:layout_width="80dp"
-                        android:layout_height="80dp"
-                        android:id="@+id/profile_photo"
-                        app:civ_border_color="@color/black"
-                        app:civ_border_width="0.5dp"
-                        android:layout_centerVertical="true"/>
-
-                </RelativeLayout>
-
-                <RelativeLayout
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="75"
-                    android:layout_marginStart="30dp"
-                    android:layout_marginEnd="30dp">
-
-                    <include layout="@layout/snippet_top_profile"/>
-
-                </RelativeLayout>
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:layout_below="@id/linLayout"
-                android:padding="20dp"
-                android:id="@+id/linLayout2"
-                android:background="@drawable/white_gray_border_bottom">
-                
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/display_name"
-                    android:textColor="@color/black"
-                    android:textStyle="bold"
-                    android:text="Nicail"
-                    android:textSize="16sp"/>
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/description"
-                    android:textColor="@color/black"
-                    android:text="Sample Description"
-                    android:textSize="16sp"
-                    android:layout_marginTop="5dp"/>
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/website"
-                    android:textColor="@color/link_blue"
-                    android:text="https://sample.website.com "
-                    android:textSize="16sp"
-                    android:layout_marginTop="5dp"/>
-
-            </LinearLayout>
-
+            <!--Middle Section -->
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:id="@+id/rellayout3"
-                android:layout_below="@+id/linLayout2"
-                android:layout_marginBottom="50dp">
-                
-                <GridView
+                android:layout_below="@+id/rellayout1"
+                android:id="@+id/rellayout2"
+                android:background="@color/white">
+
+                <RelativeLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/rellayout6">
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal"
+                        android:id="@+id/linLayout"
+                        android:weightSum="100">
+
+                        <RelativeLayout
+                            android:layout_width="0dp"
+                            android:layout_height="match_parent"
+                            android:layout_weight="25"
+                            android:layout_marginStart="25dp">
+
+                            <de.hdodenhof.circleimageview.CircleImageView
+                                android:layout_width="80dp"
+                                android:layout_height="80dp"
+                                android:id="@+id/profile_photo"
+                                app:civ_border_color="@color/black"
+                                app:civ_border_width="0.5dp"
+                                android:layout_centerVertical="true"/>
+
+                        </RelativeLayout>
+
+                        <RelativeLayout
+                            android:layout_width="0dp"
+                            android:layout_height="match_parent"
+                            android:layout_weight="75"
+                            android:layout_marginStart="30dp"
+                            android:layout_marginEnd="30dp">
+
+                            <include layout="@layout/snippet_top_profile"/>
+
+                        </RelativeLayout>
+
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical"
+                        android:layout_below="@id/linLayout"
+                        android:padding="20dp"
+                        android:id="@+id/linLayout2"
+                        android:background="@drawable/white_gray_border_bottom">
+
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:id="@+id/display_name"
+                            android:textColor="@color/black"
+                            android:textStyle="bold"
+                            android:text="Nicail"
+                            android:textSize="16sp"/>
+
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:id="@+id/description"
+                            android:textColor="@color/black"
+                            android:text="Sample Description"
+                            android:textSize="16sp"
+                            android:layout_marginTop="5dp"/>
+
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:id="@+id/website"
+                            android:textColor="@color/link_blue"
+                            android:text="https://sample.website.com "
+                            android:textSize="16sp"
+                            android:layout_marginTop="5dp"/>
+
+                    </LinearLayout>
+
+                    <ImageButton
+                        android:id="@+id/hide_show_btn"
+                        android:layout_width="30dp"
+                        android:layout_height="30dp"
+                        android:layout_marginBottom="10dp"
+                        android:layout_alignParentRight="true"
+                        android:layout_alignBottom="@+id/linLayout2"
+                        android:layout_marginEnd="10dp"
+                        android:background="@drawable/roundcorner"
+                        android:src="@drawable/ic_hide_btn"/>
+
+                </RelativeLayout>
+
+                <RelativeLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:id="@+id/gridView"
-                    android:numColumns="3"
-                    android:verticalSpacing="1dp"
-                    android:horizontalSpacing="1dp"
-                    android:stretchMode="columnWidth"
-                    android:gravity="center">
+                    android:id="@+id/rellayout3"
+                    android:layout_below="@+id/rellayout6"
+                    android:layout_marginBottom="50dp">
 
-                </GridView>
+                    <GridView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/gridView"
+                        android:numColumns="3"
+                        android:verticalSpacing="1dp"
+                        android:horizontalSpacing="1dp"
+                        android:stretchMode="columnWidth"
+                        android:gravity="center">
+
+                    </GridView>
+
+                </RelativeLayout>
 
             </RelativeLayout>
 
-        </RelativeLayout>
+        </ScrollView>
 
     </RelativeLayout>
 
