--- a/app/src/main/res/layout/fragment_gallery.xml
+++ b/app/src/main/res/layout/fragment_gallery.xml
@@ -20,6 +20,7 @@
         android:layout_below="@+id/rellayout1">
 
         <RelativeLayout
+            android:id="@+id/rellayouttop"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="60">
@@ -29,6 +30,18 @@
                 android:layout_height="match_parent"
                 android:id="@+id/galleryImageView"
                 android:scaleType="centerCrop"/>
+
+            <ImageButton
+                android:id="@+id/hide_show_btn"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:foregroundGravity="center"
+                android:layout_alignParentRight="true"
+                android:layout_alignParentBottom="true"
+                android:layout_marginBottom="10dp"
+                android:layout_marginEnd="10dp"
+                android:background="@drawable/roundcorner"
+                android:src="@drawable/ic_hide_btn"/>
 
             <ProgressBar
                 android:layout_width="100dp"
