--- a/app/src/main/res/layout/activity_notifs.xml
+++ b/app/src/main/res/layout/activity_notifs.xml
@@ -23,6 +23,16 @@
             android:layout_below="@+id/rellayout1"
             android:layout_marginBottom="50dp">
 
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="No Notifications"
+                android:textColor="@color/black"
+                android:textSize="15sp"
+                android:layout_centerHorizontal="true"
+                android:id="@+id/empty"
+                android:visibility="gone"/>
+
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/notif_listview"
                 android:layout_width="match_parent"
@@ -30,6 +40,7 @@
                 >
 
             </android.support.v7.widget.RecyclerView>
+
         </RelativeLayout>
 
         <include layout="@layout/layout_bottom_navigation_view"/>
