--- a/app/src/main/res/layout/layout_notifs_listview.xml
+++ b/app/src/main/res/layout/layout_notifs_listview.xml
@@ -1,6 +1,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="70dp"
+    android:background="@drawable/seen_bg_color"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
         <de.hdodenhof.circleimageview.CircleImageView
@@ -11,7 +12,7 @@
             android:layout_marginTop="5dp"
             android:layout_marginLeft="10dp"
             app:civ_border_width="2dp"
-            app:civ_border_color="@color/grey"/>
+            app:civ_border_color="@color/black"/>
 
         <TextView
             android:id="@+id/username"
@@ -20,7 +21,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_toRightOf="@id/profile_photo"
-            android:text="PAKYUPITS"
+            android:text=""
             android:textSize="12sp"
             android:textStyle="bold"
             android:textColor="@color/black"/>
@@ -32,7 +33,7 @@
             android:layout_toRightOf="@+id/profile_photo"
             android:layout_below="@+id/username"
             android:layout_marginLeft="10dp"
-            android:text="has reported an incident!"
+            android:text=""
             android:textSize="12sp"
             android:textColor="@color/black"/>
 
@@ -43,7 +44,7 @@
             android:layout_toRightOf="@id/profile_photo"
             android:layout_below="@id/notif_message"
             android:layout_marginLeft="10dp"
-            android:text="7 hours ago"/>
+            android:text=""/>
 
 
 
