--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,5 @@
     <color name="black">#000</color>
     <color name="link_blue">#4d94ff</color>
     <color name="darkRed">#cc0000</color>
+    <color name="light_blue">#ccffff</color>
 </resources>
