--- a/app/src/main/res/layout/layout_top_tabs_notifs.xml
+++ b/app/src/main/res/layout/layout_top_tabs_notifs.xml
@@ -19,6 +19,7 @@
                     android:layout_height="match_parent">
 
                     <TextView
+                        android:id="@+id/notifword"
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
                         android:text="Notifications"
@@ -26,6 +27,16 @@
                         android:textStyle="bold"
                         android:textColor="@color/black"
                         android:gravity="center_vertical"/>
+
+                    <ImageView
+                        android:id="@+id/kind_post"
+                        android:layout_width="30dp"
+                        android:layout_height="30dp"
+                        android:background="@drawable/ic_postemergency"
+                        android:layout_toRightOf="@id/notifword"
+                        android:layout_centerVertical="true"
+                        android:layout_marginStart="20dp"
+                        />
 
                     <ImageView
                         android:layout_width="40dp"
