--- a/app/src/main/res/layout/dialog_post.xml
+++ b/app/src/main/res/layout/dialog_post.xml
@@ -1,51 +1,53 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <RelativeLayout
         android:layout_width="280dp"
-        android:layout_height="176dp">
+        android:layout_height="wrap_content">
         <TextView
             android:id="@+id/kindofpost"
-            android:layout_width="match_parent"
-            android:layout_height="44dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:text="What kind of post?"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp"
             android:textSize="20sp"
             android:textColor="@color/black"
-            android:paddingStart="55dp"
-            android:paddingTop="6dp"
             />
         <TextView
             android:id="@+id/normal_post"
             android:layout_below="@+id/kindofpost"
             android:clickable="true"
-            android:layout_width="match_parent"
-            android:layout_height="44dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:text="Normal"
-            android:paddingStart="120dp"
-            android:paddingTop="5dp"
+            android:layout_centerHorizontal="true"
+            android:padding="10dp"
             android:textColor="@drawable/text_changecolor"
             android:textSize="18sp"/>
         <TextView
             android:id="@+id/reports_post"
             android:clickable="true"
             android:layout_below="@+id/normal_post"
-            android:layout_width="match_parent"
-            android:layout_height="44dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:textSize="18sp"
-            android:paddingStart="120dp"
-            android:paddingTop="5dp"
+            android:layout_centerHorizontal="true"
+            android:padding="10dp"
             android:textColor="@drawable/text_changecolor"
             android:text="Report"/>
         <TextView
             android:id="@+id/emergency_post"
             android:clickable="true"
             android:layout_below="@id/reports_post"
-            android:layout_width="match_parent"
-            android:layout_height="44dp"
-            android:paddingStart="105dp"
-            android:paddingTop="5dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:padding="10dp"
             android:textSize="18sp"
             android:textColor="@drawable/text_changecolor"
             android:text="Emergency"/>
