--- a/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
         android:id="@+id/ic_house"
@@ -25,9 +27,7 @@
     <item
         android:id="@+id/ic_alert"
         android:icon="@drawable/ic_notif"
-        android:title="">
-
-    </item>
+        android:title=""/>
 
     <item
         android:id="@+id/ic_android"
