--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -13,8 +13,8 @@
 
         <ImageView
             android:layout_width="wrap_content"
-            android:layout_height="80dp"
-            android:src="@drawable/instagram_logo_text"
+            android:layout_height="130dp"
+            android:src="@drawable/emercifytext"
             android:layout_gravity="center_horizontal"
             android:layout_marginBottom="40dp"
             />
