finished autocomplete places

--- a/app/src/main/res/layout/activity_places.xml
+++ b/app/src/main/res/layout/activity_places.xml
@@ -18,13 +18,14 @@
             android:layout_marginLeft="10dp"
             android:id="@+id/search"/>
 
-        <EditText
+        <AutoCompleteTextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="5dp"
             android:id="@+id/etPlaces"
             android:layout_toRightOf="@id/search"
-            android:imeOptions="actionSearch"/>
+            android:imeOptions="actionSearch"
+            />
 
     </RelativeLayout>
 
