--- a/app/src/main/res/layout/layout_top_tabs_notifs.xml
+++ b/app/src/main/res/layout/layout_top_tabs_notifs.xml
@@ -29,6 +29,15 @@
                         android:gravity="center_vertical"/>
 
                     <ImageView
+                        android:id="@+id/choose_loc"
+                        android:layout_width="40dp"
+                        android:layout_height="40dp"
+                        android:layout_centerVertical="true"
+                        android:layout_marginStart="20dp"
+                        android:layout_toRightOf="@id/notifword"
+                        android:background="@drawable/ic_share" />
+
+                    <ImageView
                         android:layout_width="40dp"
                         android:layout_height="40dp"
                         android:layout_marginEnd="20dp"
