--- a/app/src/main/res/layout/activity_next.xml
+++ b/app/src/main/res/layout/activity_next.xml
@@ -26,19 +26,26 @@
                 android:id="@+id/rellayout2"
                 android:layout_below="@+id/rellayout1">
 
-                <ImageView
-                    android:layout_width="100dp"
-                    android:layout_height="100dp"
+                <com.github.chrisbanes.photoview.PhotoView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
                     android:id="@+id/imageShare"
                     android:scaleType="centerCrop"
                     android:layout_centerVertical="true"
-                    android:layout_marginLeft="20dp"
-                    android:layout_marginBottom="40dp"/>
+                    android:layout_marginBottom="40dp"
+                    />
+
+            </RelativeLayout>
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/rellayout3"
+                android:layout_below="@+id/rellayout2">
 
                 <EditText
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_toRightOf="@+id/imageShare"
                     android:id="@+id/caption"
                     android:hint="Write a caption"
                     android:layout_marginLeft="20dp"
@@ -50,7 +57,7 @@
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/rellayout2">
+                android:layout_below="@+id/rellayout3">
 
                 <Button
                     android:layout_width="match_parent"
