--- a/app/src/main/res/layout/notification_badge.xml
+++ b/app/src/main/res/layout/notification_badge.xml
@@ -7,8 +7,8 @@
 
     <TextView
         android:id="@+id/notifications_badge1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="10dp"
+        android:layout_height="10dp"
         android:layout_gravity="top|center_horizontal"
         android:layout_marginLeft="10dp"
         android:layout_marginStart="10dp"
