--- a/app/src/main/res/layout/fragment_signout.xml
+++ b/app/src/main/res/layout/fragment_signout.xml
@@ -31,16 +31,18 @@
     </RelativeLayout>
     
     <ProgressBar
-        android:layout_width="200dp"
-        android:layout_height="200dp"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
         android:layout_centerInParent="true"
+        android:indeterminateTint="@color/emercifycolor"
+        android:layout_centerVertical="true"
         android:id="@+id/progressBar"/>
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Signing Out..."
-        android:textSize="20sp"
-        android:layout_alignBottom="@+id/progressBar"
+        android:textSize="12sp"
+        android:layout_centerVertical="true"
         android:layout_alignRight="@+id/progressBar"
         android:layout_alignLeft="@+id/progressBar"
         android:gravity="center_horizontal"
