--- a/app/src/main/res/layout/fragment_view_comments.xml
+++ b/app/src/main/res/layout/fragment_view_comments.xml
@@ -13,11 +13,35 @@
     </RelativeLayout>
 
     <RelativeLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true">
+        <ProgressBar
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:id="@+id/progress_Barcomment"
+            android:indeterminateTint="@color/emercifycolor"
+            android:layout_centerHorizontal="true"
+            android:layout_centerVertical="true"
+            android:layout_marginTop="10dp"/>
+        <TextView
+            android:id="@+id/no_comment"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="15sp"
+            android:text="No comments available"
+            android:layout_centerInParent="true"/>
+
+    </RelativeLayout>
+
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/rellayout2"
         android:layout_below="@+id/rellayout1"
         android:layout_marginBottom="60dp">
+
+
 
         <ListView
             android:layout_width="match_parent"
