--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -73,9 +73,10 @@
     </LinearLayout>
 
     <ProgressBar
-        android:layout_width="200dp"
-        android:layout_height="200dp"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
         android:id="@+id/progressBar"
+        android:indeterminateTint="@color/emercifycolor"
         android:layout_centerInParent="true"/>
 
     <TextView
@@ -83,8 +84,8 @@
         android:layout_height="wrap_content"
         android:text="Please Wait..."
         android:textColor="@color/black"
-        android:textSize="20sp"
-        android:layout_alignBottom="@+id/progressBar"
+        android:textSize="12sp"
+        android:layout_centerVertical="true"
         android:layout_alignRight="@+id/progressBar"
         android:layout_alignLeft="@+id/progressBar"
         android:gravity="center_horizontal"
