--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -23,8 +23,9 @@
         <include layout="@layout/layout_center_profile" />
 
         <ProgressBar
-            android:layout_width="150dp"
-            android:layout_height="150dp"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:indeterminateTint="@color/emercifycolor"
             android:id="@+id/profileProgressBar"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="100dp"/>
