--- a/app/src/main/res/layout/fragment_view_post.xml
+++ b/app/src/main/res/layout/fragment_view_post.xml
@@ -3,6 +3,15 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <ProgressBar
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:id="@+id/progress_Barviewpost"
+        android:indeterminateTint="@color/emercifycolor"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        android:layout_marginTop="10dp"/>
+
     <RelativeLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -17,6 +26,8 @@
         android:layout_height="wrap_content"
         android:id="@+id/rellayout2"
         android:layout_below="@+id/rellayout1">
+
+
 
         <include layout="@layout/layout_view_post" />
 
