--- a/app/src/main/res/layout/fragment_view_profile.xml
+++ b/app/src/main/res/layout/fragment_view_profile.xml
@@ -22,10 +22,12 @@
         <include layout="@layout/layout_center_view_profile" />
 
         <ProgressBar
-            android:layout_width="150dp"
-            android:layout_height="150dp"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
             android:id="@+id/profileProgressBar"
             android:layout_centerHorizontal="true"
+            android:layout_centerVertical="true"
+            android:indeterminateTint="@color/emercifycolor"
             android:layout_marginTop="100dp"/>
 
         <include layout="@layout/layout_bottom_navigation_view"/>
