--- a/app/src/main/res/layout/layout_grid_imageview.xml
+++ b/app/src/main/res/layout/layout_grid_imageview.xml
@@ -13,6 +13,7 @@
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:layout_centerInParent="true"
+        android:indeterminateTint="@color/emercifycolor"
         android:id="@+id/gridImageProgressBar"/>
 
 </RelativeLayout>
